--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://www.example.com"
-title = "johndoe"
+title = "Noor Buchi"
 
 theme = "hugo-coder"
 
@@ -15,11 +15,11 @@ pygmentscodefencesguesssyntax = true
 disqusShortname = "yourdiscussshortname"
 
 [params]
-    author = "John Doe"
+    author = "Noor Buchi"
     description = "John Doe's personal website"
     keywords = "blog,developer,personal"
-    info = "Full Stack DevOps and Magician"
-    avatarurl = "images/avatar.jpg"
+    info = "Computer Science Sudent at Allegheny College"
+    avatarurl = "images/avatar.png"
     #gravatar = "john.doe@example.com"
     footercontent = "Enter a text here."
 
@@ -28,7 +28,7 @@ disqusShortname = "yourdiscussshortname"
     hideFooter = false
     hideCredits = false
     hideCopyright = false
-    since = 2019
+    since = 2020
 
     # Git Commit in Footer, uncomment the line below to enable it.
     commit = "https://github.com/luizdepra/hugo-coder/tree/"
@@ -40,7 +40,7 @@ disqusShortname = "yourdiscussshortname"
     # "auto" (use preference set by browser)
     # "dark" (dark background, light foreground)
     # "light" (light background, dark foreground) (default)
-    colorscheme = "auto"
+    colorscheme = "dark"
 
     # Hide the toggle button, along with the associated vertical divider
     hidecolorschemetoggle = false
